tooling/nargo_cli/tests/snapshots/execution_success/brillig_cow_assign/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
global N: u32 = 10;

unconstrained fn main() {
    let mut arr: [i32; 10] = [0; 10];
    let mut mid_change: [i32; 10] = arr;
    for i in 0..N {
        if i == (N / 2) { mid_change = arr; };
        arr[i] = 27;
    }
    let modified_i: u32 = (N / 2) + 1;
    assert(arr[modified_i] == 27);
    assert(mid_change[modified_i] != 27);
}
